# sel4ninja

./: CMakeLists.txt  README.md  default.xml  domain_schedule.c  easy-settings.cmake  settings.cmake
apps/hello-ninja/include/: uart.h
apps/hello-ninja/src/: main.c  uart.c
apps/hello-world/: CMakeLists.txt
apps/hello-world/include/: foo.h
apps/hello-world/src/: main.c
